--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/fontawesome/css/fontawesome.min.css" rel="stylesheet">
-    <link href="/fontawesome/css/brands.min.css" rel="stylesheet">
-    <link href="/fontawesome/css/solid.min.css" rel="stylesheet">
     <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/demo/main.js"></script>
   </body>
 </html>
